# cuda-aes

./: CLAUDE.md  CMakeLists.txt  MPI_Structure.md  PRD.md  README.md  claude_history  debug_output  submit.sh
BitSlice_AES_CUDA_REF/: .gitignore  CMakeLists.txt  README.md
BitSlice_AES_CUDA_REF/include/: aes_keys.hpp  bs_helpers.cuh  bs_keyschedule.cuh  bs_mixcol.cuh  bs_sbox.cuh  ct_key.hpp
BitSlice_AES_CUDA_REF/src/: aes_bruteforce_bs_kernel.cu  aes_debug_kernels.cu  aes_full_kernel.cu  aes_mix_kernel.cu  aes_sbox_kernel.cu  run_bruteforce_bs.cu  run_full_aes.cu  run_mix_only.cu  run_sbox_only.cu
BitSlice_AES_CUDA_REF/tools/: bitslice32.py  gen_roundkeys_header.py  make_inputs.py  verify_outputs.py  verify_outputs_v1.py
include/: aes_cpu.h  aes_cuda.cuh  aes_cuda_bs.cuh  logger.h  master.h  utils.h  worker.h
reference/: sbatch.sh  srun-template.sh
src/: aes_cpu.cpp  aes_cuda.cu  aes_cuda_bs.cu  logger.cpp  main.cpp  master.cpp  worker.cpp
